音樂功能優化

--- a/blog/themes/reimu/layout/_partial/sidebar.ejs
+++ b/blog/themes/reimu/layout/_partial/sidebar.ejs
@@ -1,9 +1,33 @@
 <aside id="sidebar">
+  <!-- 這裡紅色都正常,是VSCode的鍋,能正常運行不用在意 -->
+  <% if (theme.player.aplayer.enable && !theme.player.meting.enable) { %>
+    <div id="aplayer-sidebar" style="margin-bottom:1rem" data-aos="<%= theme.animation.options.home.sidebar %>"></div>
+    <link rel="stylesheet" href="https://unpkg.com/aplayer/dist/APlayer.min.css">
+    <script src="https://unpkg.com/aplayer/dist/APlayer.min.js"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        const audioList = <%- JSON.stringify(theme.player.aplayer.options.audio || []) %>;
+        if (audioList.length === 0) return;
+  
+        new APlayer({
+          container: document.getElementById('aplayer-sidebar'),
+          fixed: false,
+          autoplay: <%= theme.player.aplayer.options.autoplay %>,
+          loop: "<%= theme.player.aplayer.options.loop %>",
+          order: "<%= theme.player.aplayer.options.order %>",
+          preload: "<%= theme.player.aplayer.options.preload %>",
+          volume: <%= theme.player.aplayer.options.volume %>,
+          mutex: <%= theme.player.aplayer.options.mutex %>,
+          listFolded: <%= theme.player.aplayer.options.listFolded %>,
+          lrcType: <%= theme.player.aplayer.options.lrcType %>,
+          audio: audioList
+        });
+      });
+    </script>
+  <% } %>
+  
   <% if (theme.injector.sidebar_begin) { %>
     <%- render(theme.injector.sidebar_begin, 'html'); %>
-  <% } %>
-  <% if (theme.player.aplayer.enable && !theme.player.meting.enable && theme.player.aplayer.options.fixed !== true) { %>
-    <div id="aplayer" theme="var(--color-link)" data-aos="<%= theme.animation.options.home.sidebar %>"></div>
   <% } %>
   <% if (theme.player.meting.enable && theme.player.aplayer.options.fixed !== true) { %>
     <meting-js
